..F....... [ZBX-6896] list of media types for creating new medias in a user's profile sorted by name (Vitalij)
..F....... [ZBX-6868] maps default add icon defined in defines.inc.php (Vitalij)
.......PS. [ZBX-6852] removed support of iODBC (Sasha)
A.F.I..... [ZBXNEXT-1569] implemented user name and surname displaying in acknowledgements (Ivo, Oleg)

Bug fixes:
A......... [ZBX-6124] removed unused API methods (Eduard)
..F....... [ZBX-6927] improved validation messages (Eduard)
..F....... [ZBX-6923] fixed mass delete in template list, improved code quality in hosts and templates (Vitalij)
...G...PS. [ZBX-6916] added space delimeter support in configuration file (igors)
..F....... [ZBX-6930] 'Unlink and clear' link bug fix, now it displayed (Vitalij)
..F....... [ZBX-6878] fixed history screen log bug for two items, parametr itemid renamed to itemids (Vitalij)
..F....... [ZBX-6903] fixed template name trim (Eduard, Sasha)
A.F....... [ZBX-6899] specified source parameter in SQL from events table (Vitalij)
..F....... [ZBX-6893] fixed prototype name error ($1 -> {#FSNAME}) on adding new prototype in the graph prototype form in the item prototype selection template (Vitalij)
..F....... [ZBX-6816] improved permission validation on multiple pages (Ivo, Guntis)
...G...... [ZBXNEXT-1056] improved active checks error messages (wiper)
.......P.. [ZBX-6249] fixed data loss in proxy "Data sender" process caused by unfinished transactions; thanks to MATSUDA Daiki for patch (Andris)
..F....... [ZBX-6838] fixed not being able to select all host groups in the filter (Pavels)
..F....... [ZBX-6275] fixed error after saving an LLD rule (Guntis)
..F....... [ZBX-6275] fixed several "error" column displaying problems in template item and trigger list (Guntis)
..F.....S. [ZBX-6882] fixed "Undexined index" on queue page; server won't include lld-rules in queue (Eduard, Sasha)

--------------------------------------------------------------------------------
Changes for 2.1.2

New features: