@@ -34,7 +34,7 @@ function eventSource($source = null) {
 		EVENT_SOURCE_TRIGGERS => _('trigger'),
 		EVENT_SOURCE_DISCOVERY => _('discovery'),
 		EVENT_SOURCE_AUTO_REGISTRATION => _('auto registration'),
-		EVENT_SOURCE_INTERNAL => _('internal')
+		EVENT_SOURCE_INTERNAL => _x('internal', 'event source')
 	);
 
 	if ($source === null) {
